# sun20i-pwm-uio

./: .clang-format  .gitignore  Makefile  README.md  sun20i-pwm-uio.c
app/: CMakeLists.txt  capture.h  clk.h  main.c  pwm.h  pwm_types.h  soc.h
app/ll/: CMakeLists.txt  README.md  capture.h  pwm.c  rw.c  rw.h  soc.c
app/ll/inc/: clk.h  config.h  pwm.h  registers.h  soc.h
app/ll/src/: capture.c  clk.c  config.c  pwm.c
app/pid/: CMakeLists.txt  pid.c  pid.h
app/uio/: CMakeLists.txt  README.md  uio_helper.c  uio_helper.h
driver/: README.md  sun20i-pwm-uio.c
udev/: 81-uio.rules
uio-app/: bitops.h  main.c  pwm.h  pwm_types.h  registers.h  rw.h
